--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
       <div class="max-w-6xl mx-auto px-6 text-center">
         <h3 class="text-2xl font-bold mb-8">Nos Partenaires</h3>
         <div class="grid grid-cols-12 gap-6 items-center">
-          <div class="col-span-6 md:col-span-3"><img src="img/partner1.png" alt="Partenaire 1" class="h-16 mx-auto">
+          <div class="col-span-6 md:col-span-3"><img src="img/part1.jpg" alt="Partenaire 1" class="h-16 mx-auto">
           </div>
-          <div class="col-span-6 md:col-span-3"><img src="img/partner2.png" alt="Partenaire 2" class="h-16 mx-auto">
+          <div class="col-span-6 md:col-span-3"><img src="img/part2.png" alt="Partenaire 2" class="h-16 mx-auto">
           </div>
-          <div class="col-span-6 md:col-span-3"><img src="img/partner3.png" alt="Partenaire 3" class="h-16 mx-auto">
+          <div class="col-span-6 md:col-span-3"><img src="img/part3.png" alt="Partenaire 3" class="h-16 mx-auto">
           </div>
-          <div class="col-span-6 md:col-span-3"><img src="img/partner4.png" alt="Partenaire 4" class="h-16 mx-auto">
+          <div class="col-span-6 md:col-span-3"><img src="img/part4.jpeg" alt="Partenaire 4" class="h-16 mx-auto">
           </div>
         </div>
       </div>
